--- a/apmlify.yml
+++ b/apmlify.yml
@@ -1,10 +1,4 @@
 version: 1
-backend:
-  phases:
-    build:
-      commands:
-        - "# Execute Amplify CLI with the helper script"
-        - amplifyPush --simple
 frontend:
   phases:
     preBuild:
@@ -14,7 +8,7 @@ frontend:
       commands:
         - npm run build
   artifacts:
-    baseDirectory: dist/
+    baseDirectory: /dist
     files:
       - "**/*"
   cache:
