--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "start": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^5.3.0",
+    "aws-amplify": "^5.3.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
