--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^5.3.0",
     "aws-amplify": "^5.3.10",
+    "openai": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
